GROOVY-8699: SC: emit direct bytecode for simple list (#2395)